# pbot

./: .env.example  .gitignore  .rusty-hook.toml  Cargo.toml  README.md  start.sh
pbot/: Cargo.toml
pbot/src/: lib.rs  main.rs  telegram.rs
pbot/src/modules/: addrank.rs  fwd.rs  getinfo.rs  template.rs
pbot/src/telegram/: user.rs
pbot/src/telegram/client/: commands.rs
pbot_modules_derive/: Cargo.toml
pbot_modules_derive/src/: lib.rs
scripts/: build-test.py  build-test.sh
src/: lib.rs  main.rs  modules.rs  telegram.rs  utils.rs
src/modules/: addrank.rs  base.rs  fwd.rs  getinfo.rs  template.rs
src/telegram/: chat.rs  client.rs  update.rs  user.rs
src/telegram/client/: commands.rs
